--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity">
+
+    <EditText
+        android:id="@+id/inputName"
+        android:layout_width="305dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintVertical_bias="0.466" />
 
     <EditText
         android:id="@+id/inputLEmaill"
@@ -12,45 +25,62 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Login"
+        android:text="Email"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/inputLEmaill" />
+
 
     <EditText
         android:id="@+id/inputPassword2"
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textWebPassword"
         android:text="Password"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputLEmaill" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintVertical_bias="0.675" />
+
+    <EditText
+        android:id="@+id/inputPassword2repeat"
+        android:layout_width="305dp"
+        android:layout_height="50dp"
+        android:ems="10"
+        android:inputType="textPersonName|textWebPassword"
+        android:text="Repeat password"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputLEmaill"
+        app:layout_constraintVertical_bias="0.865" />
 
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="350dp"
-        android:text="Login"
+        android:layout_marginBottom="264dp"
+        android:text="Sign Up"
         app:backgroundTint="#03A9F4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="Login Activity"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="24dp"
+        android:text="Register Activity"
         app:layout_constraintBottom_toTopOf="@+id/inputLEmaill"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -79,27 +109,31 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="169dp"
+        android:layout_height="37dp"
         android:layout_marginStart="90dp"
         android:layout_marginBottom="150dp"
-        android:text="Don't have an account?"
+        android:text="Allready have an account?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:onClick="goToRegister"
-        android:text="Register"
+        android:id="@+id/textView3"
+        android:layout_width="188dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="150dp"
+        android:text="Log In"
         android:textStyle="bold"
+        android:onClick="goToLogin"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/registerButton" />
+        app:layout_constraintStart_toEndOf="@+id/textView2" /><![CDATA[
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/textView2" />
 
+
+
+
+
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
