--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="colorSnackBarSuccess">#03A9F4</color>
-    <color name="colorSnackBarError">#E91E63</color>
+    <color name="colorSnackBarError">#EB1B63</color>
 
 </resources>
