--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,8 +11,8 @@
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +24,8 @@
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:ems="10"
+        android:hint="e-mail"
         android:inputType="textPersonName"
-        android:text="Email"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +37,8 @@
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPersonName|textWebPassword"
-        android:text="Password"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,8 +50,8 @@
         android:layout_width="305dp"
         android:layout_height="50dp"
         android:ems="10"
+        android:hint="Repeat password"
         android:inputType="textPersonName|textWebPassword"
-        android:text="Repeat password"
         app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
