--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,7 +88,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/RegisterText"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
